manifests/configs/keycloak/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/server-snippet: |2-
                            location ~* "^/auth/realms/master/metrics" {
                                return 301 /auth/realms/master;
                              }
  labels:
    app: keycloak
  name: keycloak
  namespace: keycloak-operator
spec:
  rules:
    - host: sso.apps.atlantis.janz.digital
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8443
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - sso.apps.atlantis.janz.digital
